# ChessAI

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  model-design.md  requirements.txt  run_board.vbs  run_fcpi.sh  run_lichess_bot.sh  run_offline_pv.sh  run_opening.sh  run_reinforce.sh  run_selflearn.sh  run_simulator.vbs  run_stadium.vbs  setup_lichess_bot.sh  stop_lichess_bot.sh  tactic-design.md
.bot/: run_lichess_bot.sh  setup_lichess_bot.sh  stop_lichess_bot.sh
api/: patch.cmake  setup.bat  setup.sh  verify.cmake  versions.env
api/gui/: build.bat  gadidae.py
docs/: model-design.md  summary.json  tactic-design.md
include/gadus/: arena.hpp  args.hpp  checkpoint.hpp  dataset.hpp  fcpi.hpp  game.hpp  model.hpp  precision.hpp  search.hpp
include/melano/: arena.hpp  args.hpp  checkpoint.hpp  dataset.hpp  fcpi.hpp  game.hpp  model.hpp  precision.hpp  search.hpp
scripts/: analyze.py  build.bat  build.sh  check.py  gadus_fcpi.sh  gui.py  opening_book.py  package_engine.bat  package_engine.sh  rules.py  run_opening.bat  run_opening.sh  run_simulator.vbs  run_stadium.vbs  simulator.py  stadium.py  teacher.py  transit.py  uci.py
src/: acceptance.py  analyze.py  architectures.py  arena.py  board.py  checkpoint_io.py  chess_env.py  config.py  data.py  decision.py  evaluator.py  fcpi.py  inspection.py  model.py  move_codecs.py  move_encoder.py  offline_pv.py  opening_book.py  preprocess.py  regression.py  reinforce.py  search.py  selflearn.py  simulator.py  stadium.py  standardize.py  state_codecs.py  teacher.py  train.py  uci_engine.py
src/gadus/: README.md  arena.cpp  args.cpp  checkpoint.cpp  dataset.cpp  evolution.cpp  fcpi.cpp  game.cpp  match.cpp  model.cpp  preprocess.cpp  search.cpp  searcher.cpp  tests.cpp  train.cpp  uci.cpp
src/melano/: README.md  arena.cpp  args.cpp  checkpoint.cpp  dataset.cpp  evolution.cpp  fcpi.cpp  game.cpp  match.cpp  model.cpp  preprocess.cpp  search.cpp  searcher.cpp  tests.cpp  train.cpp  uci.cpp
tests/: gadustests.cpp
